Mobile View optimization

--- a/styles/video.css
+++ b/styles/video.css
@@ -23,7 +23,7 @@
 }
 .video-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   column-gap: 16px;
   row-gap: 40px;
   margin-bottom: 220px;
@@ -38,6 +38,18 @@
   }
   .sidebar {
     display: none;
+  }
+  .right-section,
+  .upload-icon-container,
+  .youtube-apps-icon-container,
+  .notifications-container,
+  .notification-count,
+  .hamburger-menu,
+  .voice-search-button {
+    display: none;
+  }
+  .youtube-logo {
+    margin-left: 10px;
   }
 }
 @media (min-width: 451px) and (max-width: 750px) {
