Mobile Footer adjusted

--- a/styles/video.css
+++ b/styles/video.css
@@ -34,7 +34,8 @@
   .video-grid {
     grid-template-columns: 1fr;
     padding: 0;
-    margin: 0;
+    margin: 10px;
+    margin-top: 0;
   }
   .sidebar {
     display: none;
@@ -45,7 +46,8 @@
   .notifications-container,
   .notification-count,
   .hamburger-menu,
-  .voice-search-button {
+  .voice-search-button,
+  .footer {
     display: none;
   }
   .youtube-logo {
